crates/remind-me-to-cli/tests/snapshots/cli__dry_run_no_reminders.snap
---
source: crates/remind-me-to-cli/tests/cli.rs
info:
  program: remind-me-to
  args:
    - "--color"
    - never
    - check
    - "--dry-run"
    - /tmp/.tmpQfbqG3
  env:
    GH_TOKEN: ""
    GITHUB_TOKEN: ""
    NO_COLOR: "1"
    RUST_LOG: "off"
---
success: true
exit_code: 0
----- stdout -----
No REMIND-ME-TO comments found.

----- stderr -----
