crates/remind-me-to-cli/tests/snapshots/cli__help_output.snap
---
source: crates/remind-me-to-cli/tests/cli.rs
info:
  program: remind-me-to
  args:
    - "--color"
    - never
    - "--help"
  env:
    GH_TOKEN: ""
    GITHUB_TOKEN: ""
    NO_COLOR: "1"
    RUST_LOG: "off"
---
success: true
exit_code: 0
----- stdout -----
A CLI tool that scans source files for REMIND-ME-TO comments and checks if their conditions have been met

Usage: remind-me-to [OPTIONS] <COMMAND>

Commands:
  check  Scan files for REMIND-ME-TO comments and check their conditions
  help   Print this message or the help of the given subcommand(s)

Options:
      --color <COLOR>  When to use colors: auto (default, detect tty), always, never. Respects NO_COLOR env var [default: auto] [possible values: auto, always, never]
  -h, --help           Print help
  -V, --version        Print version

----- stderr -----
