crates/remind-me-to-cli/tests/snapshots/cli__quiet_produces_no_output.snap
---
source: crates/remind-me-to-cli/tests/cli.rs
info:
  program: remind-me-to
  args:
    - "--color"
    - never
    - check
    - "--dry-run"
    - "--quiet"
    - /tmp/.tmpdB62Gf
  env:
    GH_TOKEN: ""
    GITHUB_TOKEN: ""
    NO_COLOR: "1"
    RUST_LOG: "off"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
